# github-monitor

./: .env  .gitignore  .pre-commit-config.yaml  POST_ASSIGNMENT_ANSWERS.md   PRE_ASSIGNMENT_ANSWERS.md  README.md  Regression Analysis.ipynb  docker-compose.yml  pyproject.toml
frontend/: .Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css  utils.js
frontend/src/components/Plot/: Plot.css  Plot.jsx  style.css
frontend/src/components/RepositoryList/: RepoFeedback.jsx  RepositoryList.css  RepositoryList.jsx  SearchBar.jsx  style.css
frontend/src/demo/: allCommits_1.json  fetchDescription.json  fetchLastIssue.json  searchRepo.json
src/: .Dockerfile
src/config/: configuration.py
src/data/: data-extraction.ipynb
src/forecast/: main.ipynb
src/forecast/preprocess/: complete_series.py  data-extraction.ipynb  data-preprocess.ipynb  feature_engineering.py  preprocess_script.py
src/forecast/process/: forecast_ensamble.py  hyperparameter_optimization.py  hyperparamter_optimization.py  iterative_prediction.py
src/forecast/utils/: utils.py
src/framework/: common.py
src/githubmonitor/: commit_count_xgboost.joblib  main.py
src/githubmonitor/api/: schemas.py
src/githubmonitor/api/routes/: langchain.py  repositories.py  sessions.py  users.py
src/githubmonitor/forecast/: main.ipynb
src/githubmonitor/forecast/preprocess/: complete_series.py  data-preprocess.ipynb  feature_engineering.py  preprocess_script.py
src/githubmonitor/forecast/process/: forecast_ensemble.py  (+2 more)
src/tools/: nlp.py  sentiment.py
(+16 files in other folders)
